--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "path": "^0.12.7",
