--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
+    "animate.css": "^3.7.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
@@ -20,6 +21,7 @@
     "nodemon": "^1.18.10",
     "path": "^0.12.7",
     "react": "^16.8.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.8.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
