--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.8.2",
     "react-router-dom": "^5.0.0",
+    "react-slideshow-image": "^1.1.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
